force-app/main/default/objects/FinancialProduct__c/FinancialProduct__c.object-meta.xml
<CustomObject>
    <description>Object to store all product related data</description>
    <label>Financial Product</label>
    <nameField>
        <label>FinancialProduct Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>