force-app/main/default/objects/FinancialProduct__c/fields/AllowedtoGroup__c.field-meta.xml
<CustomField>
    <fullName>AllowedtoGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >The check box to define if the product is allowed to be grouped into multiple  product selection</description>
    <label>AllowedtoGroup</label>
    <type>Checkbox</type>
</CustomField>