force-app/main/default/objects/FinancialProduct__c/fields/DisplayLabel__c.field-meta.xml
<CustomField>
    <fullName>DisplayLabel__c</fullName>
    <description>Product display label</description>
    <label>Display Label</label>
    <length>40</length>
    <type>Text</type>
</CustomField>