force-app/main/default/objects/FinancialProduct__c/fields/ImageType__c.field-meta.xml
<CustomField>
    <fullName>ImageType__c</fullName>
    <description>ImageType</description>
    <label>Image Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ImageType</valueSetName>
    </valueSet>
</CustomField>