force-app/main/default/objects/FinancialProduct__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Product is active if true</description>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>