force-app/main/default/objects/FinancialProduct__c/fields/IsMembershipProduct__c.field-meta.xml
<CustomField>
    <fullName>IsMembershipProduct__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Membership Product is active if true</description>
    <label>Is Membership Product</label>
    <type>Checkbox</type>
</CustomField>