force-app/main/default/objects/FinancialProduct__c/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <description>Product long description</description>
    <label>Long Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>