force-app/main/default/objects/FinancialProduct__c/fields/MaxVersion__c.field-meta.xml
<CustomField>
    <fullName>MaxVersion__c</fullName>
    <description>Max Version</description>
    <label>Max Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>