force-app/main/default/objects/FinancialProduct__c/fields/MinVersion__c.field-meta.xml
<CustomField>
    <fullName>MinVersion__c</fullName>
    <description>min version</description>
    <label>Min Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>