force-app/main/default/objects/FinancialProduct__c/fields/Routing__c.field-meta.xml
<CustomField>
    <fullName>Routing__c</fullName>
    <label>Routing Json</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>savings</fullName>
            </value>
            <value>
                <fullName>checking</fullName>
            </value>
            <value>
                <fullName>certificate</fullName>
            </value>
            <value>
                <fullName>consumer-loan</fullName>
            </value>
            <value>
                <fullName>credite-card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>