force-app/main/default/objects/FinancialProduct__c/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <description>Product short description</description>
    <label>Short Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>