force-app/main/default/objects/FinancialProduct__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>SortOrder which wil be used to display the order in which products will be displayed.</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>