force-app/main/default/objects/FinancialProduct__c/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <description>Sub category of a product</description>
    <label>Sub Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>