force-app/main/default/objects/FinancialProduct__c/fields/UiRouting__c.field-meta.xml
<CustomField>
    <fullName>UiRouting__c</fullName>
    <description>Routing Json for UI</description>
    <label>Ui Routing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UiRoutingNames</valueSetName>
    </valueSet>
</CustomField>