force-app/main/default/objects/FinancialProduct__c/fields/Weightage__c.field-meta.xml
<CustomField>
    <fullName>Weightage__c</fullName>
    <description>Weightage for products for lead scoring</description>
    <label>Weightage</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>