force-app/main/default/objects/FinancialProduct__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>SubCategory__c</columns>
    <columns>Type__c</columns>
    <columns>InternalCode__c</columns>
    <columns>ExternalCode__c</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>